@@ -132,6 +132,9 @@ gem "gitlab-flowdock-git-hook", "~> 0.4.2"
 # Gemnasium integration
 gem "gemnasium-gitlab-service", "~> 0.2"
 
+# Slack integration
+gem "slack-notifier", "~> 0.2.0"
+
 # d3
 gem "d3_rails", "~> 3.1.4"
 
