@@ -56,6 +56,7 @@ class Project < ActiveRecord::Base
   has_one :flowdock_service, dependent: :destroy
   has_one :assembla_service, dependent: :destroy
   has_one :gemnasium_service, dependent: :destroy
+  has_one :slack_service, dependent: :destroy
   has_one :forked_project_link, dependent: :destroy, foreign_key: "forked_to_project_id"
   has_one :forked_from_project, through: :forked_project_link
   # Merge Requests for target project should be removed with it
@@ -304,7 +305,7 @@ class Project < ActiveRecord::Base
   end
 
   def available_services_names
-    %w(gitlab_ci campfire hipchat pivotaltracker flowdock assembla emails_on_push gemnasium)
+    %w(gitlab_ci campfire hipchat pivotaltracker flowdock assembla emails_on_push gemnasium slack)
   end
 
   def gitlab_ci?
